feat: join task fin
