# application/route/taskRouter.go
@@ -9,6 +9,7 @@ import (
 func TaskRoutes(router *gin.RouterGroup, controller controller.TaskController) {
 	tasks := router.Group("/rooms/:room_id/tasks")
 	{
+		tasks.GET("/", controller.GetByNickName())
 		tasks.POST("/", controller.Post())
 		tasks.PATCH("/:task_id", controller.Patch())
 	}
